# robotics

./: CMakeLists.txt  dioporcaccio.txt  formato dato nav.rtf  gps_to_odom.cpp  launch.launch  odom_to_tf.cpp  pubCode.cpp  second_node.launch  temp.cpp
first_project/: CMakeLists.txt  package.xml
first_project/cfg/: parameter.cfg
first_project/src/: gps_to_odom.cpp  lidar_remap.cpp  odom_to_tf.cpp
